--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
             <meta charset="UTF-8" />
             <meta http-equiv="X-UA-Compatible" content="IE=edge" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <title>Dad Jokes</title>
+            <title>Jokes</title>
             <link rel="stylesheet" href="./styles.css" />
         </head>
         
@@ -19,6 +19,9 @@
                     suscipit expedita.
                 </p>
             </div>
+            <footer>
+                By :Salmoon Samuel
+            </footer>
             <script src="./app.js"></script>
         </body>
         </html>
